--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Smart Glass Calculator</title>
+  <title>Gauri's Stylish Calculator</title>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- Orbitron Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Orbitron&display=swap" rel="stylesheet" />
 
   <style>
     body {
       font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #1f1c2c, #928dab);
+      background: linear-gradient(135deg, #f8cdda, #1d2b64);
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
@@ -23,90 +22,120 @@
     }
 
     body.light-mode {
-      background: linear-gradient(135deg, #fceabb, #f8b500);
+      background: linear-gradient(135deg, #000000, #333333);
+    }
+
+    .logo-text {
+      font-family: 'Pacifico', cursive;
+      font-size: 2.8rem;
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      padding: 14px 34px;
+      box-shadow: 0 4px 40px rgba(0, 0, 0, 0.4);
+      margin-bottom: 25px;
+      color: #ffffff;
+      text-align: center;
+      text-shadow: 1px 1px 2px #00000077;
+    }
+
+    body.light-mode .logo-text {
+      background: rgba(0, 0, 0, 0.5);
+      color: #fff;
     }
 
     .calculator {
       backdrop-filter: blur(12px);
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 20px;
-      padding: 25px;
+      background: rgba(255, 255, 255, 0.12);
+      border-radius: 25px;
+      padding: 28px;
       width: 340px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
+      box-shadow: 0 8px 40px rgba(0, 0, 0, 0.4);
       color: white;
-    }
-
-    body.light-mode .calculator {
-      background: rgba(255, 255, 255, 0.5);
-      color: #333;
+      position: relative;
     }
 
     .display {
-      background-color: rgba(255, 255, 255, 0.15);
-      padding: 15px;
+      background-color: rgba(255, 255, 255, 0.2);
+      padding: 16px;
       font-size: 2.4rem;
-      border-radius: 12px;
-      margin-bottom: 20px;
+      border-radius: 14px;
+      margin-bottom: 22px;
       text-align: right;
       overflow-x: auto;
       color: #fff;
     }
 
-    body.light-mode .display {
-      background-color: rgba(0, 0, 0, 0.1);
-      color: #000;
-    }
-
     .btn {
-      font-size: 1.5rem;
-      padding: 18px 0;
-      border-radius: 12px;
+      font-size: 1.4rem;
+      padding: 16px 0;
+      border-radius: 14px;
       border: none;
-      transition: 0.2s;
+      transition: 0.3s;
     }
 
     .btn:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 12px #ffffff66;
+      transform: scale(1.1);
+      box-shadow: 0 0 12px #ffffff88;
     }
 
     .btn-number {
-      background: rgba(255, 255, 255, 0.2);
+      background: linear-gradient(to right, #fbd3e9, #bb377d);
       color: #fff;
     }
 
     .btn-operator {
-      background: rgba(255, 165, 0, 0.25);
-      color: #ffae42;
+      background: linear-gradient(to right, #ffecd2, #fcb69f);
+      color: #000;
     }
 
     .btn-clear {
-      background: rgba(231, 76, 60, 0.3);
-      color: #e74c3c;
+      background: #ff6b6b;
+      color: #fff;
     }
 
     .btn-equal {
-      background: rgba(46, 204, 113, 0.3);
-      color: #2ecc71;
+      background: #00cec9;
+      color: #fff;
     }
 
-    body.light-mode .btn-number,
-    body.light-mode .btn-operator,
-    body.light-mode .btn-clear,
-    body.light-mode .btn-equal {
-      color: #333;
+    .btn-backspace {
+      background: #2d3436;
+      color: #fff;
     }
 
-    .toggle-mode {
+    .toggle-mode, .toggle-history {
       font-size: 0.9rem;
-      margin-bottom: 15px;
+      margin: 10px 0;
       text-align: center;
       cursor: pointer;
-      color: #ccc;
+      background-color: #000;
+      padding: 5px 10px;
+      border-radius: 8px;
+      color: #fff;
     }
 
-    body.light-mode .toggle-mode {
-      color: #222;
+    body.light-mode .toggle-mode,
+    body.light-mode .toggle-history {
+      background-color: #fff;
+      color: #000;
+    }
+
+    .history {
+      margin-top: 10px;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.3);
+      border-radius: 10px;
+      max-height: 150px;
+      overflow-y: auto;
+      font-size: 0.9rem;
+      color: #ccc;
+      display: none;
+    }
+
+    .history-entry {
+      border-bottom: 1px solid rgba(255,255,255,0.2);
+      padding: 5px 0;
     }
 
     @media (max-width: 400px) {
@@ -118,6 +147,9 @@
   </style>
 </head>
 <body>
+  <div class="logo-text">
+    💠 Gauri's Calculator
+  </div>
 
   <div class="calculator">
     <div class="toggle-mode" onclick="toggleMode()">🌙 Toggle Dark/Light Mode</div>
@@ -144,18 +176,24 @@
       <div class="col-3"><button class="btn btn-clear w-100" onclick="clearDisplay()">C</button></div>
       <div class="col-3"><button class="btn btn-operator w-100" onclick="press('+')">+</button></div>
 
-      <div class="col-12"><button class="btn btn-equal w-100" onclick="calculate()">=</button></div>
+      <div class="col-3"><button class="btn btn-operator w-100" onclick="calculatePercentage()">%</button></div>
+      <div class="col-6"><button class="btn btn-backspace w-100" onclick="backspace()">⌫ Back</button></div>
+      <div class="col-3"><button class="btn btn-equal w-100" onclick="calculate()">=</button></div>
     </div>
-  </div>
 
-  <!-- Audio -->
+    <div class="toggle-history" onclick="toggleHistory()">📜 Show/Hide History</div>
+    <div class="history" id="history"></div>
+  </div>
+  
+
   <audio id="clickSound" src="https://www.soundjay.com/buttons/sounds/button-16.mp3" preload="auto"></audio>
 
-  <!-- JavaScript -->
   <script>
-    let expression = localStorage.getItem('lastCalc') || '';
+    let expression = '';
     const display = document.getElementById('result');
+    const historyBox = document.getElementById('history');
     const clickSound = document.getElementById('clickSound');
+    let history = [];
 
     function press(val) {
       clickSound.play();
@@ -170,13 +208,33 @@
       display.innerText = '0';
     }
 
+    function backspace() {
+      clickSound.play();
+      expression = expression.slice(0, -1);
+      display.innerText = expression || '0';
+    }
+
     function calculate() {
       clickSound.play();
       try {
         const result = eval(expression);
+        history.unshift(`${expression} = ${result}`);
+        if (history.length > 5) history = history.slice(0, 5);
         display.innerText = result;
         expression = result.toString();
-        localStorage.setItem('lastCalc', expression);
+        updateHistory();
+      } catch {
+        display.innerText = 'Error';
+        expression = '';
+      }
+    }
+
+    function calculatePercentage() {
+      clickSound.play();
+      try {
+        const result = eval(expression) / 100;
+        display.innerText = result;
+        expression = result.toString();
       } catch {
         display.innerText = 'Error';
         expression = '';
@@ -187,13 +245,21 @@
       document.body.classList.toggle('light-mode');
     }
 
-    // Load last calculation on startup
+    function toggleHistory() {
+      historyBox.style.display = historyBox.style.display === 'none' ? 'block' : 'none';
+    }
+
+    function updateHistory() {
+      historyBox.innerHTML = history.map(item => `<div class='history-entry'>${item}</div>`).join('');
+    }
+
     window.onload = () => {
-      if (expression) {
-        display.innerText = expression;
-      }
+      expression = '';
+      display.innerText = '0';
+      history = [];
+      updateHistory();
+      historyBox.style.display = 'none';
     };
   </script>
-
 </body>
 </html>
